crates/forge_domain/src/transformer/snapshots/forge_domain__transformer__reasoning_normalizer__tests__model_changed_snapshot.snap
---
source: crates/forge_domain/src/transformer/reasoning_normalizer.rs
expression: snapshot
---
transformation: ReasoningNormalizer_model_changed
before:
  messages:
    - id: "[id]"
      text:
        role: User
        content: First question
    - id: "[id]"
      text:
        role: Assistant
        content: First assistant response
        model: model-a
        reasoning_details:
          - text: I need to think about this carefully
            signature: sig_model_a
            data: ~
            id: "[id]"
            format: ~
            index: ~
            type_of: ~
    - id: "[id]"
      text:
        role: User
        content: Follow-up question
    - id: "[id]"
      text:
        role: Assistant
        content: Second assistant response
        model: model-a
        reasoning_details:
          - text: I need to think about this carefully
            signature: sig_model_a
            data: ~
            id: "[id]"
            format: ~
            index: ~
            type_of: ~
  reasoning:
    enabled: true
after:
  messages:
    - id: "[id]"
      text:
        role: User
        content: First question
    - id: "[id]"
      text:
        role: Assistant
        content: First assistant response
        model: model-a
    - id: "[id]"
      text:
        role: User
        content: Follow-up question
    - id: "[id]"
      text:
        role: Assistant
        content: Second assistant response
        model: model-a
  reasoning:
    enabled: true
